# ncnn-8-12

./: CMakeLists.txt  README.md
benchmark/: benchncnn.cpp  shufflenetv2_se_deploy.param
examples/: .shufflenetv2.cpp.swp  AdvancedEast.cpp  CMakeLists.txt  absdiff.cpp  demo  demo.cpp  dot  dot_python.cpp  get_roi.cpp  mobilenetssd.cpp  ocr.h  ocrssd.cpp  picture.cpp  shufflenetssd.cpp  test_permute.cpp  textssd.cpp  vedio.cpp
src/: CMakeLists.txt
src/layer/: ctcgreedydecoder.cpp  ctcgreedydecoder.h  identity.cpp  identity.h  innerproduct.cpp  innerproduct.h  lstmnew.cpp  lstmnew.h  permute.cpp  priorbox.cpp  priorbox.h  reverse.cpp  reverse.h
src/layer/arm/: innerproduct_arm.cpp
tools/: CMakeLists.txt
tools/caffe/: caffe.proto  caffe2ncnn.cpp
